# TicketSystem-2025

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/buffer/: buffer_pool_manager.cpp  lru_k_replacer.cpp
src/disk/: disk_manager.cpp  disk_scheduler.cpp
src/include/buffer/: buffer_pool_manager.h  lru_k_replacer.h
src/include/common/: channel.h  config.h  container.h  list.h  map.h  priority_queue.hpp  util.h  vector.h
src/include/disk/: disk_manager.h  disk_scheduler.h
src/include/management/: management.h  ticket.h  train.h  user.h
src/include/storage/: b_plus_tree.h  b_plus_tree_header_page.h  b_plus_tree_internal_page.h  b_plus_tree_leaf_page.h  b_plus_tree_page.h  page_guard.h
src/management/: main.cpp  management.cpp  ticket.cpp  train.cpp  user.cpp
src/storage/: b_plus_tree.cpp  b_plus_tree_internal_page.cpp  b_plus_tree_leaf_page.cpp  b_plus_tree_page.cpp  main.cpp  page_guard.cpp
